--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Net-OAuth-Yahoo
 
+0.02    2012/01/09
+        Formatted POD better.
+
 0.01    2012/01/08
         Initial release.
