--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Net-OAuth-Yahoo
 
+0.03    2012/01/09
+        Updated META.yml.
+
 0.02    2012/01/09
         Formatted POD better.
 
