--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for Net-OAuth-Yahoo
+0.04    2012/03/03
+        Added Crypt::SSLeay and LWP::Protocol::https as prereqs.
 
 0.03    2012/01/09
         Updated META.yml.
