--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Net-OAuth-Yahoo
+0.05    2012/6/16
+        Modernizing the code a bit.
+
 0.04    2012/03/03
         Added Crypt::SSLeay and LWP::Protocol::https as prereqs.
 
