--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Net-OAuth-Yahoo
+0.06    2012/6/21
+        Fixing version info as I forgot to update one place.
+
 0.05    2012/6/16
         Modernizing the code a bit.
 
